ENHANCEMENT: java version switching + wmq now deals with ibm jce providers specific to openjdk version